Update package meta data Fix BL007 warnings in Calendar Fix link color Fix menu hide after link click on mobile

--- a/examples/FluentUI.Demo.Client/wwwroot/css/site.css
+++ b/examples/FluentUI.Demo.Client/wwwroot/css/site.css
@@ -42,7 +42,6 @@ header {
     header .logo {
         width: 108px;
         height: 23px;
-        left: 40px;
         padding: 0 30px;
     }
 
@@ -155,6 +154,7 @@ footer {
     position: relative;
     top: 10px;
     left: 25px;
+    height: 25px;
     z-index: 2;
     transition: all 300ms ease-in-out;
 }
@@ -175,13 +175,6 @@ footer {
     right: 0px;
 }
 
-#menu-toggle:checked header {
-    padding-left: 220px;
-}
-
-[dir="rtl"] #menu-toggle:checked ~ header {
-    right: 220px;
-}
 
 #menu-toggle:checked + .menu-icon {
     left: 280px;
@@ -201,6 +194,9 @@ footer {
     padding-right: 20px;
 }
 
+a {
+    color: var(--accent-foreground-rest);
+}
 
 blockquote {
     border-left: 5px solid var(--accent-fill-rest);
